--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,38 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  concentric_transition: ^1.0.1
+  flutter_advanced_drawer: ^1.3.2
+
+  iconsax: ^0.0.8
+  avatar_glow: ^2.0.1
+  page_transition: "^2.0.4"
+  flutter_launcher_icons: ^0.9.2
+  getwidget: ^2.0.4
+  flutter_inappwebview: ^5.3.2
+  text_scroll: ^0.0.4
+  lottie: ^1.3.0
+
+  dio: ^4.0.0
+  flutter_bounceable: ^1.0.1
+  incrementally_loading_listview: ^1.0.0
+  intl: ^0.17.0
+  liquid_pull_to_refresh: ^3.0.0
+  shimmer: ^2.0.0
+  change_app_package_name: ^1.0.0
+  firebase_auth: ^3.3.14
+  firebase_core: ^1.15.0
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.1.0
+  flutter_facebook_auth: ^3.5.1
+  fluttertoast: ^8.0.8
+  twitter_login: ^4.0.1
+  simple_icons: ^6.13.0
+  cloud_firestore: ^3.1.13
+  awesome_page_transitions: ^1.0.0
+  page_animation_transition: ^0.0.9
+
+  flutter_social_button: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
