--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,24 +39,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   concentric_transition: ^1.0.1
   flutter_advanced_drawer: ^1.3.2
-
   iconsax: ^0.0.8
   avatar_glow: ^2.0.1
   page_transition: "^2.0.4"
   flutter_launcher_icons: ^0.9.2
   getwidget: ^2.0.4
-  flutter_inappwebview: ^5.3.2
   text_scroll: ^0.0.4
   lottie: ^1.3.0
-
   dio: ^4.0.0
   flutter_bounceable: ^1.0.1
   incrementally_loading_listview: ^1.0.0
@@ -64,19 +56,18 @@ dev_dependencies:
   liquid_pull_to_refresh: ^3.0.0
   shimmer: ^2.0.0
   change_app_package_name: ^1.0.0
-  firebase_auth: ^3.3.14
-  firebase_core: ^1.15.0
-  flutter_signin_button: ^2.0.0
-  google_sign_in: ^5.1.0
-  flutter_facebook_auth: ^3.5.1
   fluttertoast: ^8.0.8
   twitter_login: ^4.0.1
   simple_icons: ^6.13.0
-  cloud_firestore: ^3.1.13
   awesome_page_transitions: ^1.0.0
   page_animation_transition: ^0.0.9
-
+  on_boarding_ui: ^0.0.4
   flutter_social_button: any
+  onboarding_animation: ^0.0.1
+  fancy_on_boarding: ^1.7.0
+  http: ^0.13.1
+  url_launcher: ^5.7.10
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,9 +81,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - assets/images/2.png
+  - assets/images/3.png
+  - assets/images/4.png
+  - assets/images/5.png
+  - assets/images/1.png
+  - assets/images/menu.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -105,17 +100,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito/Nunito-Regular.ttf
+        - asset: assets/fonts/Nunito/Nunito-Bold.ttf
+          weight: 500
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
